--- a/src/css/detail/_detail-main.scss
+++ b/src/css/detail/_detail-main.scss
@@ -1,21 +1,14 @@
 .coin {
   position: relative;
 
-  .flex {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-
-    @media only screen and (max-width: $tablet-bp) {
-      flex-direction: column;
-    }
-  }
-
   .coin-text {
     margin-top: 20px;
-    padding-right: 30px;
-    min-width: 0;
+    width: 80%;
     position: relative;
+
+    @media only screen and (max-width: $tablet-bp) {
+      width: 100%;
+    }
 
     .coin-text__header {
       margin-bottom: 10px;
@@ -79,9 +72,23 @@
     }
   }
 
+  .flex {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+
+    @media only screen and (max-width: $tablet-bp) {
+      flex-direction: column;
+    }
+  }
+
   .graph {
-    // background-color: $white;
-    margin: 50px 0;
+    margin: 50px 0 20px 0;
+    width: 75%;
+
+    @media only screen and (max-width: $tablet-bp) {
+      width: 100%;
+    }
 
     .graph__header {
       font-weight: $medium;
